--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Solicitud Servicio de Transporte  </title>
+<title>Solicitud Servicio de Transporte LA TRECE </title>
 <script>
 function enviarUbicacion() {
     if (navigator.geolocation) {
@@ -30,7 +30,7 @@ function enviarUbicacion() {
 </script>
 </head>
 <body>
-<h2>Enviar ubicación actual por WhatsApp</h2>
+<h2>Solicitud Servicio de Transporte LA TRECE</h2>
 <button onclick="enviarUbicacion()">Enviar mi ubicación</button>
 </body>
 </html>
